<resources>
    <string name="app_name" translatable="false">Kora Time</string>
    <string name="google_api_key" translatable="false">AIzaSyD2-LK1ZmpP268ANPVyH8KWaNEk70aFJrM</string>
    <string name="default_room_picture">"https://firebasestorage.googleapis.com/v0/b/kora-time-d21c3.appspot.com/o/images%2Fgroup_profile.png?alt=media&amp;token=68cbdd0e-43f2-4634-9ba9-bdcdec71555d" </string>
    <string name="default_profile_picture">https://firebasestorage.googleapis.com/v0/b/kora-time-d21c3.appspot.com/o/images%2Fprofile_picture.png?alt=media&amp;;token=650310ed-94a0-479b-8bb3-ad2f3c4b6489</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="national_id">National ID</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_as_player">Sign Up As Player</string>
    <string name="sign_up_as_stadium_manager">Sign Up As Stadium Manager</string>
    <string name="add_profile_picture">Add Profile Picture</string>
    <string name="you_have_an_account_sign_in">You have an account? Sign in</string>
    <string name="add_room">Add Room</string>
    <string name="add_room_picture">Add Room Picture</string>
    <string name="enter_room_name">Enter Room Name</string>
    <string name="enter_room_description">Enter Room Description</string>
    <string name="create_new_room">Create New Room</string>
    <string name="create_room">Create Room</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log In</string>
    <string name="you_dont_have_an_account_sign_up">You dont have an account? Sign up</string>
    <string name="room_image">Room Image</string>
    <string name="title_activity_maps">maps</string>
    <string name="add_stadium">Add Stadium</string>
    <string name="create_new_stadium">Create Stadium</string>
    <string name="enter_stadium_name">Enter Stadium Name</string>
    <string name="enter_stadium_description">Enter Stadium Description</string>
    <string name="add_stadium_picture">Add Stadium Picture</string>
    <string name="create_stadium">Create Stadium</string>
    <string name="add_stadium_location">Add Stadium Location</string>
    <string name="kora_time">Kora Time</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message</string>
    <string name="password_optional">Password ( optional )</string>
    <string name="last_message_sent">last message sent</string>
    <string name="add_stadium_pictures">Add Stadium Pictures</string>
    <string name="stadium_images">Stadium Images</string>
    <string name="stadium_book_times">Stadium Book Times</string>
    <string name="stadium_available_times">Stadium Available Times</string>
    <string name="search_for_people">search for people</string>
    <string name="chat">Chat</string>
    <string name="enter_stadium_price_per_hour">Enter Stadium Price (Per Hour)</string>
    <string name="add_your_stadium">Add Your Stadium</string>
    <string name="notifications">Notifications</string>

    <string-array name="time_slots">
        <item> 12PM</item>
        <item> 1PM</item>
        <item> 2PM</item>
        <item> 3PM</item>
        <item> 4PM</item>
        <item> 5PM</item>
        <item> 6PM</item>
        <item> 7PM</item>
        <item> 8PM</item>
        <item> 9PM</item>
        <item> 10PM</item>
        <item> 11PM</item>
        <item> 12AM</item>
        <item> 1AM</item>
        <item> 2AM</item>
        <item> 3AM</item>
        <item> 4AM</item>
        <item> 5AM</item>
        <item> 6AM</item>
        <item> 7AM</item>
        <item> 8AM</item>
        <item> 9AM</item>
        <item> 10AM</item>
        <item> 11AM</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_slider_content_description">image slider</string>
    <string name="stop_searching">Stop Searching?</string>
    <string name="logout">Logout</string>
    <string name="bookings">Bookings</string>

</resources>