<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.koratime.stadiums_manager.manageStadium.ManageStadiumViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".stadiums_manager.manageStadium.ManageStadiumActivity">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintBottom_toTopOf="@id/scrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_tab_indicator"
                android:elevation="0dp"
                android:fitsSystemWindows="true">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:paddingStart="2dp"
                        android:paddingEnd="5dp">

                        <ImageView
                            android:id="@+id/notifications"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/shape_search"
                            android:contentDescription="@string/notifications"
                            android:padding="5dp"
                            android:src="@drawable/ic_notification"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.appbar.MaterialToolbar>
            </com.google.android.material.appbar.AppBarLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swipeRefresh">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    >


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:paddingHorizontal="15dp">

                        <TextView
                            android:id="@+id/delete_stadiun"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_remove"
                            android:gravity="center"
                            android:paddingVertical="10dp"
                            android:text="Remove Stadium"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/image_picker"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="35dp"
                            android:contentDescription="@string/add_multiple_stadium_pictures"
                            android:src="@drawable/ic_add_images"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/image_picker_textView"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/delete_stadiun" />

                        <TextView
                            android:id="@+id/image_picker_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/add_multiple_stadium_pictures"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="@+id/image_picker"
                            app:layout_constraintStart_toEndOf="@id/image_picker"
                            app:layout_constraintTop_toTopOf="@+id/image_picker" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/stadium_images"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/stadium_images"
                        android:textSize="20sp"
                        android:visibility="gone" />

                    <com.denzcoskun.imageslider.ImageSlider
                        android:id="@+id/image_slider"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginBottom="15dp"
                        android:visibility="gone"
                        app:iss_auto_cycle="true"
                        app:iss_delay="1000"
                        app:iss_period="1500"
                        app:iss_title_background="@color/transparent" />

                    <CalendarView
                        android:id="@+id/calendarView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:dateTextAppearance="@style/calendar_style"
                        android:paddingHorizontal="10dp" />

                    <TextView
                        android:id="@+id/bookingTimes_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="20dp"
                        android:text="@string/stadium_book_times"
                        android:textSize="20sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="600dp"
                        android:layout_gravity="center"
                        android:paddingHorizontal="15dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>